Workpage 2 Add To Cart

--- a/components/Pages/aisles/Snacks.html
+++ b/components/Pages/aisles/Snacks.html
@@ -9,6 +9,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <script src="addToCartSnacks.js" async></script>
     <link rel="stylesheet" href="../../../css/index.css" />
     <link
       rel="stylesheet"
@@ -59,7 +60,7 @@
           <a href="doritos_P3.html">
             <h3>Doritos Nacho Cheese</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>
               Doritos Nacho Cheese Tortilla- Flavoury cheese nachos (235g)
@@ -81,7 +82,7 @@
           <a href="lays_P3.html">
             <h3>Lays Classics</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>Lay's Classic Potato Chips - Classic Lays Chips (235g)</li>
           </details>
@@ -101,7 +102,7 @@
           <a href="flamingHotCheetos_P3.html">
             <h3>Flaming Hot Cheetos</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>Flaming Hot Cheetos - Flaming Hot Cheetos (535g)</li>
           </details>
@@ -118,7 +119,7 @@
           <a href="kitkat_P3.html">
             <h3>KitKat</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>Kitkat 4-Finger Milk Chocolate Bar (45g)</li>
           </details>
@@ -135,7 +136,7 @@
           <a href="aero_P3.html">
             <h3>Aero</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>Aero Milk chocolate Candy Bar (42g)</li>
           </details>
@@ -154,7 +155,7 @@
           <a href="snicker_P3.html">
             <h3>Snickers</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$5 <span>tax not included</span></div>
           <details>
             <li>Snickers Chocolate Candy Bar (57g)</li>
           </details>
