--- a/components/Pages/aisles/bread.html
+++ b/components/Pages/aisles/bread.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="addToCartBread.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al-Sham</title>
   </head>
@@ -54,7 +55,7 @@
             alt="Whole Wheat Round Bread"
           />
           <h3>Whole Wheat Round Bread</h3>
-          <div class="price">$29.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 80</li>
             <li>Protein: 4 grams</li>
@@ -76,7 +77,7 @@
             alt="crepebread"
           />
           <h3>Crepe Bread</h3>
-          <div class="price">$2.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 100</li>
             <li>Protein: 2 grams</li>
@@ -95,7 +96,7 @@
         <div class="box">
           <img src="../../../images/breadImages/toast.jpg" alt="Toast Bread" />
           <h3>Toast Bread</h3>
-          <div class="price">$4.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 30</li>
             <li>Protein: 8 grams</li>
@@ -117,7 +118,7 @@
             alt="Whole Wheat Bread"
           />
           <h3>Whole Wheat Bread with Nuts</h3>
-          <div class="price">$15.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 20</li>
             <li>Protein: 2 grams</li>
@@ -139,7 +140,7 @@
             alt="Round Bread"
           />
           <h3>Round Bread</h3>
-          <div class="price">$4.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 30</li>
             <li>Protein: 10 grams</li>
@@ -160,7 +161,7 @@
             alt="Whole Round Bread with Wheat"
           />
           <h3>Whole Round Bread with Wheat</h3>
-          <div class="price">$16.99 <span>tax not included</span></div>
+          <div class="price">$3 <span>tax not included</span></div>
           <details>
             <li>Calories: 50</li>
             <li>Protein: 17 grams</li>
