--- a/components/Pages/aisles/fruitsAndVegetables.html
+++ b/components/Pages/aisles/fruitsAndVegetables.html
@@ -14,7 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="store.js" async></script>
+    <!--<script src="store.js" async></script>-->
+    <script src="addToCartFruits.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al-Sham</title>
   </head>
