--- a/components/Pages/aisles/meatAndFish.html
+++ b/components/Pages/aisles/meatAndFish.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="addToCartMeat.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Grocery Store</title>
   </head>
@@ -64,7 +65,7 @@
 
 
 
-          <div class="price">$4.25 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -80,7 +81,7 @@
             <h3>Steak</h3>                      
         </a>
 
-          <div class="price">$7.89 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -95,7 +96,7 @@
           <a href="chicken_P3.html">            
             <h3>Chicken Breast</h3>                      
         </a>
-          <div class="price">$13.00 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -109,7 +110,7 @@
           <a href="salmon_P3.html"> 
             <h3>Salmon</h3>          
         </a>
-          <div class="price">$9.99 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -123,7 +124,7 @@
           <a href="tunaFish_P3.html">
             <h3>Tuna Fish</h3>
         </a>
-          <div class="price">$6.99 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
@@ -136,7 +137,7 @@
           <a href="shrimp_P3.html">
             <h3>Shrimp</h3>
         </a>
-          <div class="price">$9.99 <span>tax not included</span></div>
+          <div class="price">$1 <span>tax not included</span></div>
           <div class="quantity">
             <span>Quantity: </span>
             <input type="number" min="1" max="100" value="1" />
