--- a/components/Pages/aisles/beverages2.html
+++ b/components/Pages/aisles/beverages2.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="addToCartBeverages.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al-Sham</title>
   </head>
@@ -54,7 +55,7 @@
             alt="Ginger Ale"
           />
           <h3>Ginger Ale</h3>
-          <div class="price">$1.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>Ginger ale is made from actual Ginger</li>
             <li>its main brands are Schweppes and Canada Dry</li>
@@ -70,7 +71,7 @@
         <div class="box">
           <img src="../../../images/bevImages/tea.jpg" alt="Tea" />
           <h3>Tea</h3>
-          <div class="price">$3.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>Tea is one of the most popular drinks</li>
             <li>there are many types of teas:green tea,early gray</li>
@@ -86,7 +87,7 @@
         <div class="box">
           <img src="../../../images/bevImages/cola.jpg" alt="Cola" />
           <h3>Cola</h3>
-          <div class="price">$2.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>Cola is the most popular soft drink in the grocery aisle</li>
             <li>It has a great lasting taste</li>
@@ -105,7 +106,7 @@
             alt="Coffee"
           />
           <h3>Coffee</h3>
-          <div class="price">$5.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>100% Arabic Coffee</li>
             <li>Pure and Natural Coffee</li>
@@ -124,7 +125,7 @@
             alt="WaterMelon Juice"
           />
           <h3>WaterMelon Juice</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>watermelon juice is made from watermelon</li>
             <li>its fresh and natural no added sugar</li>
@@ -142,7 +143,7 @@
             alt="Onions"
           />
           <h3>Lemonade Juice</h3>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$6 <span>tax not included</span></div>
           <details>
             <li>lemonade is from actual lemonds</li>
             <li>lemoande is fresh and natural and naturally squeezed</li>
