--- a/components/Pages/aisles/pastryAndBakery.html
+++ b/components/Pages/aisles/pastryAndBakery.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="addToCartPastry.js" async></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Al Sham</title>
   </head>
@@ -53,7 +54,7 @@
           <a href="trimasu_P3.html">
             <h3>tiramisu</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Tiramisu is an elegant and rich layered Italian dessert</li>
             <li>
@@ -77,7 +78,7 @@
           <a href="chocolatMiniCake_P3.html">
             <h3>Small Chocolate Cake</h3>
         </a>
-          <div class="price">$1.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Super delicious, thick, delicious</li>
             <li>Delicious, homemade</li>
@@ -101,7 +102,7 @@
           <a href="strawberryCake_P3.html">
             <h3>Strawbery Cake</h3>
         </a>
-          <div class="price">$4.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Super delicious, thick Strawberry</li>
             <li>Delicious, homemade</li>
@@ -125,7 +126,7 @@
           <a href="chocolatChipCookie_P3.html">
             <h3>Chocolate Chip Cookie</h3>
         </a>
-          <div class="price">$0.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Super delicious chocolate cookie</li>
             <li>Oven Backed and homemade</li>
@@ -144,7 +145,7 @@
           <a href="chocolatCakeWithIcing_P3.html">
             <h3>Chocolate Cake with Chocolate Icing</h3>
         </a>
-          <div class="price">$5.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Super delicious chocolate chocolate</li>
             <li>Oven Backed and homemade</li>
@@ -162,7 +163,7 @@
           <a href="croissant_P3.html">
             <h3>Croissant</h3>
         </a>
-          <div class="price">$3.99 <span>tax not included</span></div>
+          <div class="price">$4 <span>tax not included</span></div>
           <details>
             <li>Super delicious oven baked Croissant</li>
             <li>Oven Backed and homemade</li>
