--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -96,12 +96,12 @@
             </div>
           </a>
 
-          <a href="aisles/eggsAndDairy.html">
+          <!-- <a href="aisles/eggsAndDairy.html">
             <div class="card btn">
               <h4>Eggs and Dairy</h4>
               <i class="fas fa-egg"></i>
             </div>
-          </a>
+          </a> -->
 
           <a href="aisles/pastryAndBakery.html">
             <div class="card btn">
