--- a/components/Pages/aisles/aisles.html
+++ b/components/Pages/aisles/aisles.html
@@ -69,12 +69,12 @@
             </div>
           </a>
 
-          <a href="/components/Pages/aisles/eggsAndDairy.html">
+          <!-- <a href="/components/Pages/aisles/eggsAndDairy.html">
             <div class="card btn">
               <h4>Eggs and Dairy</h4>
               <i class="fas fa-egg"></i>
             </div>
-          </a>
+          </a> -->
 
           <a href="/components/Pages/aisles/pastryAndBakery.html">
             <div class="card btn">
