--- a/components/Pages/forgotPassword.html
+++ b/components/Pages/forgotPassword.html
@@ -35,11 +35,16 @@
     </div>
 
     <div class="container">
-      <h2 class="text-center">Login</h2>
+      <h2 class="text-center">Change Password</h2>
       <div class="text-center">
         <form class="form">
           <div class="form-control">
-            <input type="email2" name="email2" placeholder="Email" required />
+            <input
+              type="email2"
+              name="email2"
+              placeholder="username"
+              required
+            />
           </div>
           <div class="form-control">
             <input
@@ -56,7 +61,7 @@
             <input
               type="password"
               name="password"
-              placeholder="Confirm password"
+              placeholder="Change password"
               required
               minlength="4"
               maxlength="8"
@@ -65,10 +70,6 @@
           </div>
           <input type="submit" value="Send" class="btn btn-primary" />
         </form>
-        <p>
-          Forgot passwowrd?
-          <a href="../Pages/forgotPassword.html">Click here</a>
-        </p>
       </div>
     </div>
     <section>
