--- a/components/Pages/aisles/bananas_P3.html
+++ b/components/Pages/aisles/bananas_P3.html
@@ -42,33 +42,35 @@
     </div>
 
     <style>
-      html,
-      body {
+     html, body {
         height: 100%;
         width: 100%;
         margin: 0;
-      }
-
-      container {
+        
+       }
+        
+       container {
         max-width: 1200px;
         margin: 0 auto;
         padding: 15px;
         display: flex;
         overflow: auto;
+        
       }
-
-      .left {
+      
+      .left{
         width: 65%;
         position: relative;
       }
-
-      .right {
+      
+      
+      .right{
         width: 35%;
         margin-top: 100px;
-        margin-left: 10px;
+        margin-left: 30px;
         position: relative;
       }
-
+      
       .button {
         border: None;
         padding: 15px;
@@ -81,10 +83,16 @@
         border-radius: 12px;
         display: inline-block;
         margin: 10px;
+        
       }
       .image {
         border-style: solid;
-        border-color: skyblue;
+        border-color:skyblue;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 80px;
+        width: 80%;
       }
     </style>
 
@@ -118,19 +126,7 @@
           <h1>Al-Sham</h1>
           <p>Copyright &copy; 2021</p>
         </div>
-        <nav>
-          <ul>
-            <li><a href="home.html"></a>Home</li>
-            <li><a href="login.html"></a>Login</li>
-            <li><a href="createAccount.html"></a>Create Account</li>
-          </ul>
-        </nav>
-        <div class="social">
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-        </div>
-      </div>
+     
     </footer>
   </body>
 </html>
