--- a/components/Pages/aisles/chicken_P3.html
+++ b/components/Pages/aisles/chicken_P3.html
@@ -41,7 +41,7 @@
       </div>
 
 <style>
-    html, body {
+   html, body {
         height: 100%;
         width: 100%;
         margin: 0;
@@ -54,6 +54,7 @@
         padding: 15px;
         display: flex;
         overflow: auto;
+        
       }
       
       .left{
@@ -65,7 +66,7 @@
       .right{
         width: 35%;
         margin-top: 100px;
-        margin-left: 10px;
+        margin-left: 30px;
         position: relative;
       }
       
@@ -86,8 +87,12 @@
       .image {
         border-style: solid;
         border-color:skyblue;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 80px;
+        width: 80%;
       }
-
 </style>
 
 <container>
@@ -117,19 +122,7 @@
         <h1>Al-Sham</h1>
         <p>Copyright &copy; 2021</p>
       </div>
-      <nav>
-        <ul>
-          <li><a href="home.html"></a>Home</li>
-          <li><a href="login.html"></a>Login</li>
-          <li><a href="createAccount.html"></a>Create Account</li>
-        </ul>
-      </nav>
-      <div class="social">
-        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-      </div>
-    </div>
+  
   </footer>
 </body>
 </html>
