--- a/components/Pages/home.html
+++ b/components/Pages/home.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
+   <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/index.css" />
     <link
       rel="stylesheet"
@@ -147,19 +144,7 @@
           <h1>Al-Sham</h1>
           <p>Copyright &copy; 2021</p>
         </div>
-        <nav>
-          <ul>
-            <li><a href="home.html"></a>Home</li>
-            <li><a href="login.html"></a>Login</li>
-            <li><a href="createAccount.html"></a>Create Account</li>
-          </ul>
-        </nav>
-        <div class="social">
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-        </div>
-      </div>
+       
     </footer>
   </body>
 </html>
