--- a/css/index.css
+++ b/css/index.css
@@ -47,17 +47,18 @@ img {
 .navbar {
   background-color: var(--primary-color);
   color: white;
-  height: 70px;
+  height: 100px;
   
 }
 .navbar ul {
   display: flex;
+  font-size: 12px;
   
 }
 .navbar a {
   color: #ffff;
-  padding: 10px;
-  margin: 0 5px;
+  padding: 4px;
+  margin: 0 3px;
   
 }
 
